methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:8: error: ')' expected but ';' found.
    forward();left();forward();brush(Down();brushUp();
                                           ^